pragma solidity ^0.5.11

// Smart Contract for the 2019 Blockchain Challenge at Uni Basel 
// Case Verein für Vorsorge 
// Contributors: 
//  Julian Mordig, Alex Walter und Tim Keller 

contract Vorsorge {
    struct TransactionDetails {
        uint _currentBalance;
        uint _date;
        uint _randomNumber;
    }
}